# automotive_sales_AU

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_parent.md  ROADMAP.md  config.yaml  pyproject.toml
legacy_code/: automotive_sales_marklines_00001.py  fcai_publications_0001.py  vehicles_marklines.py
migrations/: 001_initial_schema.sql  002_marklines_enhancements.sql  003_fcai_articles.sql  004_extracted_tables_unique.sql  005_fcai_state_sales.sql  006_scrape_runs_content_hash.sql
src/motor_vehicles/: config.py  main.py  notify.py  prefect_flow.py  quality.py  update.py
src/motor_vehicles/extraction/: image_tables.py  pdf_tables.py  pdf_text.py  state_sales.py
src/motor_vehicles/scraping/: fcai_articles.py  fcai_catalog.py  fcai_client.py  marklines_browser.py  marklines_client.py  marklines_parser.py
src/motor_vehicles/storage/: database.py  loader.py  models.py
src/motor_vehicles/utils/: logging.py
tests/: conftest.py  test_classify_articles.py  test_database_live.py  test_fcai_catalog.py  test_html_tables.py  test_marklines_parser.py  test_notify.py  test_pdf_tables.py  test_quality.py  test_state_sales.py  test_update.py  test_update_integration.py
