[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motor-vehicles"
version = "0.1.0"
description = "Scraper for Australian automotive sales data from Marklines and FCAI"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "psycopg[binary]>=3.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "click>=8.1",
    "pandas>=2.1",
    "lxml>=5.0",
    "html5lib>=1.1",
    "pdfplumber>=0.11",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "beautifulsoup4>=4.14.3",
    "anthropic>=0.40",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
browser = [
    "playwright>=1.40",
]

[project.scripts]
motor-vehicles = "motor_vehicles.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/motor_vehicles"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
